--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "blockly": "^3.20191014.4",
-    "electron-prompt": "^1.4.0"
+    "electron-prompt": "^1.4.0",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "electron": "^7.1.7",
